name:                bouquet
version:             0.0.1
synopsis:            Network Utilities
homepage:            http://github.com/kim/bouquet
license:             OtherLicense
--license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:  Readme.md, examles/*.hs

library
  exposed-modules:   Network.Bouquet
  other-modules:     Network.Bouquet.Internal
  build-depends:     async
                   , base > 4 && < 5
                   , containers
                   , hashable
                   , network
                   , resource-pool
                   , time
                   , transformers
                   , unordered-containers
                   , MonadCatchIO-transformers

  hs-source-dirs:    src

  ghc-options:       -Wall -O -rtsopts
  ghc-prof-options:  -Wall -prof -auto-all -fprof-auto -with-rtsopts=-hc


source-repository head
  type:     git
  location: git://github.com/kim/bouquet.git
